	PR driver/47678 	* gcc.c (main): Do not compile inputs if there were errors in 	option handling. 	* opts-common.c (read_cmdline_option): Check for wrong language 	after other error checks.

testsuite:
	* gcc.dg/opts-6.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170056 138bc75d-0d04-0410-961f-82ee72b054a4